# sound-grid-plugin

./: .gitignore  CMakeLists.txt  README.md
Source/: GridComponent.cpp  GridComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleVoice.cpp  SampleVoice.h  SidebarComponent.cpp  SidebarComponent.h  SoundCircle.cpp  SoundCircle.h  StandaloneApp.cpp
